--- a/themes/custom/fitpreg/src/sass/components/_node.scss
+++ b/themes/custom/fitpreg/src/sass/components/_node.scss
@@ -1,21 +1,18 @@
-main {
+.news-paragraph {
 	max-width: 78.875rem;
-  margin: 0 auto;
+  margin: 0 0 0 3.3%;
+	width: 74.6%;
+	font-family: Montserrat,Arial,sans-serif;
 
-	.region-content {
-		width: 74.6%;
-		font-family: Montserrat,Arial,sans-serif;
+	.views-field-title {
+		font-size: 48px;
+    line-height: 52px;
+    margin: .5rem 0 0;
+    font-weight: 200;
+   }
 
-		.views-field-title {
-			font-size: 48px;
-    	line-height: 52px;
-    	margin: .5rem 0 0;
-    	font-weight: 200;
-    }
-
-		.field__label {
-			display: none;
-			}
+	.field__label {
+		display: none;
 		}
 
 		.views-field-field-short-description {
@@ -87,7 +84,7 @@ main {
     			width: 100%;
     			height: 100%!important;
     			background: #3e3e3e;
-    			background-image: url('../images/icons/email.png') !important;
+    			background-image: url('../images/icons/mail.png') !important;
     			background-repeat: no-repeat;
     			background-position: center;
     			background-size: 26px;
@@ -118,7 +115,21 @@ main {
 				}
 			}
 
-			.paragraph--type--list {
+			.paragraph--type--images {
+				text-align: center;
+			}
+
+			.paragraph--type--image-text {
+
+				h2 {
+					font-size: 22px;
+	    		line-height: 26px;
+	    		margin: 1.25rem 0;
+	    		font-weight: 200;
+				}
+			}
+
+			.paragraph--type--list-mini {
 				border-bottom: 1px solid #dedede;
 
 				.field--type-integer {
@@ -142,12 +153,16 @@ main {
 					margin: 0 16px 16px 0;
 				}
 
-				.field--name-field-description-link {
-					height: 20px;
+				h2 {
+					font-weight: 200;
 				}
 
-				.field--name-field-body-link {
-					height: 20px;
+				p {
+					margin: 10px 0;
+				}
+
+				ul {
+					padding-left: 52%;
 				}
 			}
 
@@ -191,4 +206,45 @@ main {
 			}
 		}
 	}
+}
+
+.title_last_news {
+	font-size: 20px;
+  height: 24px;
+  line-height: 24px;
+  font-family: "montserrat-light",arial;
+  font-weight: 200;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+  margin: 0;
+	width: 74.6%;
+}
+
+.view-display-id-you_might_also_like {
+	margin: 0;
+  width: 100%;
+  padding-top: 10px;
+
+  .clearfix {
+  	margin-bottom: 10px;
+  }
+
+  .views-field-title {
+  	width: 219px;
+  	font-size: 0;
+    line-height: 0;
+
+  	a{
+  		color: #000;
+  		text-decoration: none;
+  		padding: 3px 0 0px;
+    	text-align: left;
+    	line-height: 1.5;
+    	font-size: 14px;
+  	}
+
+  	a:hover {
+  		color: #ec188c;
+  	}
+  }
 }
