--- a/themes/custom/fitpreg/src/sass/fitpreg.style.scss
+++ b/themes/custom/fitpreg/src/sass/fitpreg.style.scss
@@ -12,6 +12,7 @@
 @import "components/mosaic-layout";
 @import "components/breadcrumbs";
 @import "components/node";
+@import "components/right_sidebar";
 
 body {
   color: $color-black;
@@ -23,5 +24,11 @@ body {
       margin: 0 auto;
       max-width: 1360px;
     }
+  }
+  main {
+    display: flex;
+    flex-direction: row;
+    max-width: 1360px;
+    margin: 0 auto;
   }
 }
