New scss component: _all-weeks.scss. Rename _right_sidebar.scss

--- a/themes/custom/fitpreg/src/sass/fitpreg.style.scss
+++ b/themes/custom/fitpreg/src/sass/fitpreg.style.scss
@@ -12,7 +12,8 @@
 @import "components/mosaic-layout";
 @import "components/breadcrumbs";
 @import "components/node";
-@import "components/right_sidebar";
+@import "components/right-sidebar";
+@import "components/all-weeks";
 
 body {
   color: $color-black;
