--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -4183,6 +4183,49 @@ footer {
       .layout-sidebar-first .views-row .views-field-title a:hover {
         color: #ec188c; }
 
+.all-weeks .view-content .views-row {
+  padding-left: 20em;
+  position: relative;
+  min-height: 300px; }
+  .all-weeks .view-content .views-row .views-field {
+    margin-bottom: 1.5em; }
+  .all-weeks .view-content .views-row .views-field-field-week {
+    text-transform: capitalize;
+    font-weight: normal;
+    font-size: 1.5em; }
+    .all-weeks .view-content .views-row .views-field-field-week span {
+      margin-right: 2px; }
+  .all-weeks .view-content .views-row .views-field-field-week-link a {
+    text-decoration: none;
+    color: #ec188c; }
+  .all-weeks .view-content .views-row .views-field-field-img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0; }
+    .all-weeks .view-content .views-row .views-field-field-img::before {
+      content: '';
+      position: absolute;
+      display: block;
+      height: calc(100% + 1.25rem);
+      width: 1px;
+      background: #dedede;
+      top: 10px;
+      right: -1.25rem; }
+    .all-weeks .view-content .views-row .views-field-field-img::after {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #ec188c;
+      top: 10px;
+      right: -23px; }
+
+.all-weeks .view-content .views-row:nth-child(40) .views-field-field-img::before {
+  height: 95%; }
+
 body {
   color: #000;
   font-family: 'Montserrat'; }
