One week page: add css style.

--- a/themes/custom/fitpreg/src/sass/fitpreg.style.scss
+++ b/themes/custom/fitpreg/src/sass/fitpreg.style.scss
@@ -14,6 +14,7 @@
 @import "components/node";
 @import "components/right-sidebar";
 @import "components/all-weeks";
+@import "components/one-week";
 
 body {
   color: $color-black;
