--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -4226,6 +4226,107 @@ footer {
 .all-weeks .view-content .views-row:nth-child(40) .views-field-field-img::before {
   height: 95%; }
 
+.week-only-page .week-page-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 30px; }
+  .week-only-page .week-page-wrapper .attachment-before {
+    margin: 0 30px 0 10px;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 70px;
+            flex: 0 0 70px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .week-only-page .week-page-wrapper .attachment-before .week-paginator {
+      font-size: 14px;
+      text-transform: uppercase;
+      text-align: center;
+      position: relative;
+      white-space: nowrap; }
+      .week-only-page .week-page-wrapper .attachment-before .week-paginator::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        left: 50%;
+        margin-left: -.5px;
+        height: 75%;
+        width: 1px;
+        z-index: 0;
+        background: #dedede; }
+      .week-only-page .week-page-wrapper .attachment-before .week-paginator h3 {
+        position: relative;
+        display: block;
+        width: 70px;
+        height: 70px;
+        margin: 0 0 1.5rem;
+        font-size: 14px;
+        z-index: 10;
+        border: 1px solid #dedede;
+        border-radius: 50%;
+        background: white; }
+        .week-only-page .week-page-wrapper .attachment-before .week-paginator h3 a {
+          text-decoration: none;
+          font-weight: 400;
+          line-height: 21px;
+          color: #9e9e9e;
+          display: block;
+          text-align: center;
+          position: relative;
+          top: 25px; }
+          .week-only-page .week-page-wrapper .attachment-before .week-paginator h3 a:hover {
+            cursor: pointer;
+            color: #ec188c; }
+      .week-only-page .week-page-wrapper .attachment-before .week-paginator .views-field-field-week {
+        background: #000;
+        border-color: #000;
+        font-weight: 400;
+        color: white; }
+        .week-only-page .week-page-wrapper .attachment-before .week-paginator .views-field-field-week .week-label {
+          margin-top: 22px; }
+      .week-only-page .week-page-wrapper .attachment-before .week-paginator .views-field-field-see-all-weeks a {
+        text-decoration: none;
+        font-size: 12px;
+        color: #ec188c; }
+        .week-only-page .week-page-wrapper .attachment-before .week-paginator .views-field-field-see-all-weeks a:hover {
+          cursor: pointer;
+          color: #aa0e63; }
+  .week-only-page .week-page-wrapper .view-content .views-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    .week-only-page .week-page-wrapper .view-content .views-row h4 {
+      margin: 1.25rem 0;
+      font-size: 24px;
+      line-height: 28px;
+      font-weight: 200; }
+    .week-only-page .week-page-wrapper .view-content .views-row .views-field-field-img {
+      -webkit-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1; }
+    .week-only-page .week-page-wrapper .view-content .views-row .views-field-field-your-growing-baby {
+      -webkit-box-flex: 4;
+          -ms-flex: 4;
+              flex: 4;
+      margin-left: 15px; }
+      .week-only-page .week-page-wrapper .view-content .views-row .views-field-field-your-growing-baby h2 {
+        font-family: Montserrat, sans-serif;
+        margin-top: 0;
+        font-size: 32px;
+        line-height: 36px;
+        font-weight: 100; }
+    .week-only-page .week-page-wrapper .view-content .views-row .views-field-field-tips-and-todos .field--name-field-title {
+      font-weight: bold; }
+
 body {
   color: #000;
   font-family: 'Montserrat'; }
