--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -2468,7 +2468,8 @@
       display: flex;
       position: absolute;
       top: 0;
-      left: 0; }
+      left: 0;
+      z-index: 10; }
     .region-header .secondline-blocks-wrapper #back-btn {
       display: none;
       color: #fff;
@@ -3995,12 +3996,44 @@ footer {
     text-transform: uppercase;
     color: #ec188c; }
 
-.view-header {
-  padding-bottom: 20px; }
-  .view-header span {
-    font-size: 48px;
-    line-height: 52px;
-    font-weight: 200; }
+.sharethis-wrapper {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #dedede; }
+  .sharethis-wrapper .st_plusone_button {
+    display: none; }
+  .sharethis-wrapper .st_fblike_button {
+    display: none; }
+  .sharethis-wrapper .stButton {
+    font-size: 0;
+    width: 28%;
+    max-width: 100px;
+    height: 44px;
+    text-align: center;
+    margin: 0; }
+    .sharethis-wrapper .stButton .st-facebook-counter {
+      width: 100%;
+      height: 100% !important;
+      background: #3b5998;
+      background-image: url("../images/icons/facebook.png") !important;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 26px; }
+    .sharethis-wrapper .stButton .st-pinterest-counter {
+      width: 100%;
+      height: 100% !important;
+      background: #cc2127;
+      background-image: url("../images/icons/pinterest.png") !important;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 26px; }
+    .sharethis-wrapper .stButton .st-email-counter {
+      width: 100%;
+      height: 100% !important;
+      background: #3e3e3e;
+      background-image: url("../images/icons/mail.png") !important;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 26px; }
 
 .news-paragraph {
   max-width: 78.875rem;
@@ -4030,44 +4063,6 @@ footer {
     .news-paragraph .views-field-uid a {
       text-decoration: none;
       color: #000; }
-  .news-paragraph .sharethis-wrapper {
-    padding-bottom: 15px;
-    border-bottom: 1px solid #dedede; }
-    .news-paragraph .sharethis-wrapper .st_plusone_button {
-      display: none; }
-    .news-paragraph .sharethis-wrapper .st_fblike_button {
-      display: none; }
-    .news-paragraph .sharethis-wrapper .stButton {
-      font-size: 0;
-      width: 28%;
-      max-width: 100px;
-      height: 44px;
-      text-align: center;
-      margin: 0; }
-      .news-paragraph .sharethis-wrapper .stButton .st-facebook-counter {
-        width: 100%;
-        height: 100% !important;
-        background: #3b5998;
-        background-image: url("../images/icons/facebook.png") !important;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 26px; }
-      .news-paragraph .sharethis-wrapper .stButton .st-pinterest-counter {
-        width: 100%;
-        height: 100% !important;
-        background: #cc2127;
-        background-image: url("../images/icons/pinterest.png") !important;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 26px; }
-      .news-paragraph .sharethis-wrapper .stButton .st-email-counter {
-        width: 100%;
-        height: 100% !important;
-        background: #3e3e3e;
-        background-image: url("../images/icons/mail.png") !important;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 26px; }
   .news-paragraph .views-field-field-paragraphs {
     margin-top: 20px; }
     .news-paragraph .views-field-field-paragraphs .field--name-field-image-demo {
@@ -4233,8 +4228,25 @@ footer {
 .all-weeks .view-content .views-row:nth-child(40) .views-field-field-img::before {
   height: 95%; }
 
+.week-only-page .view-header .views-field {
+  margin-bottom: 5px; }
+
+.week-only-page .view-header h3.views-field-field-week {
+  margin: 10px 0;
+  font-size: 48px;
+  font-weight: 200; }
+
+.week-only-page .views-field-uid span {
+  margin: .5rem 0;
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  font-weight: 700; }
+  .week-only-page .views-field-uid span a {
+    text-decoration: none;
+    color: #000; }
+
 .week-only-page .week-page-wrapper {
-  border-top: 1px solid lightgray;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4276,7 +4288,7 @@ footer {
         height: 70px;
         margin: 0 0 1.5rem;
         font-size: 13px;
-        z-index: 10;
+        z-index: 1;
         border: 1px solid #dedede;
         border-radius: 50%;
         background: white; }
@@ -4330,12 +4342,12 @@ footer {
     .week-only-page .week-page-wrapper .view-content .views-row .views-field-field-img {
       -webkit-box-flex: 1;
           -ms-flex: 1;
-              flex: 1; }
+              flex: 1;
+      margin-right: 15px; }
     .week-only-page .week-page-wrapper .view-content .views-row .views-field-field-your-growing-baby {
       -webkit-box-flex: 4;
           -ms-flex: 4;
-              flex: 4;
-      margin-left: 15px; }
+              flex: 4; }
       .week-only-page .week-page-wrapper .view-content .views-row .views-field-field-your-growing-baby h2 {
         font-family: Montserrat, sans-serif;
         margin-top: 0;
