--- a/themes/custom/fitpreg/src/sass/components/_header.scss
+++ b/themes/custom/fitpreg/src/sass/components/_header.scss
@@ -174,6 +174,7 @@ $font-Flaticon-next: "\f103";
       position: absolute;
       top: 0;
       left: 0;
+      z-index: 10;
     }
 
     #back-btn {
