--- a/themes/custom/fitpreg/src/sass/components/_one-week.scss
+++ b/themes/custom/fitpreg/src/sass/components/_one-week.scss
@@ -1,6 +1,28 @@
 .week-only-page {
+  .view-header {
+    .views-field {
+      margin-bottom: 5px;
+    }
+    h3.views-field-field-week {
+      margin: 10px 0;
+      font-size: 48px;
+      font-weight: 200;
+    }
+  }
+  .views-field-uid {
+    span {
+      margin: .5rem 0;
+      font-size: 13px;
+      line-height: 18px;
+      text-transform: uppercase;
+      font-weight: 700;
+      a {
+        text-decoration: none;
+        color: #000;
+      }
+    }
+  }
   .week-page-wrapper { //this class is added by fitpreg.js
-    border-top: 1px solid lightgray;
     display: flex;
     padding-top: 30px;
     .attachment-before {
@@ -34,7 +56,7 @@
           height: 70px;
           margin: 0 0 1.5rem;
           font-size: 13px;
-          z-index: 10;
+          z-index: 1;
           border: 1px solid #dedede;
           border-radius: 50%;
           background: white;
@@ -101,10 +123,10 @@
         }
         .views-field-field-img {
           flex: 1;
+          margin-right: 15px;
         }
         .views-field-field-your-growing-baby {
           flex: 4;
-          margin-left: 15px;
           h2 {
             font-family: Montserrat, sans-serif;
             margin-top: 0;
